# .dotfiles

./: .gitignore  .sops.yaml  .statix.toml  :style=Bold  CHANGELOG.md  EMERGENCY_RECOVERY.md  QUICKSTART.md  README-EMERGENCY.md  README.md  README.md.bak  SOLUTION.md  START_HERE.md  \  ]  addon.xpi  anchor  architecture.drawio  aspauldingcode_dotfiles.mobileconfig  batch_jpg_convert.py  build-pkg.sh  check-secrets-status.sh  copilot_test.py  count_lines_of_code.sh  debug_xquartz  diagnose-emergency.sh  displays-reorder.sh  dock_finder_trash.sh  erase-install-fetcher.sh  erase-install-installer.sh  erase-install-invokation-tool.sh  explanation.md  fix-emergency-auto.sh  flake.nix  flakehub.toml  install-mac.sh  install.sh  install_script.sh  instant-fullscreen.sh  instant-fullscreen.sh.bk  launch-secrets-manager.sh  (+29 more)
.githooks/: prepare-commit-msg
CUSTOM_yabai_scripts/: abc123swapsort.sh  check-spaces-displays.sh  dismiss-notifications.sh  display-label-tracker.sh  displays-reorder.sh  move_spaces_to_respective_display.sh  move_window_and_focus_space_label.sh  move_window_to_display.sh  osaprompt.sh  print_spaces.sh  prompt_display.py  python_prompter.sh  restore_windows.sh  spaces-clear.sh  spaces_focus.sh  swapsortresult  toggle-dock.sh  toggle-gaps.sh  toggle-sketchybar.sh  toggle-transparency.sh  yabai-spaces-init-program.sh  yabai_labeler.sh
crates/dendritic/: Cargo.toml  _package.nix
crates/dendritic/dendritic/: Cargo.toml
crates/dendritic/dendritic-ipc/: Cargo.toml
crates/dendritic/dendritic-ipc/src/: lib.rs
crates/dendritic/dendritic/src/: agent.rs  client.rs  helper.rs  ide.rs  main.rs  notify.rs  powerd.rs  wg.rs
den-aspects/: styling.nix
dendritic_modules/: dock.nix
docs/: README.md  agentic_neovim.txt  ansible-nix.txt  appearance.md  awesome-nix.md  connect-device.md  contributing.md  cursor_configure.txt  den.md  dendritic-helper.md  dendritic-patterns.md  dendritic-tray.md  dentric_nix.md  deployment-guide.md  deployment-runbook.md  development-guide.md  eduroam_wifi_asahi.txt  fleet-status.json  fleet-status.md  gcloud-auth.md  java_install_location_symlink.txt  java_lsp.txt  local-ai-bench-mba.md  local-ai-bench-sliceanddice.md  local-ai.md  microvms.txt  neovim_choices.txt  nh.txt  nix-android.md  nixinstall.md  pass-gpg-fingerprint.txt  pass-rotation-state.json  pass-secretspec.md  project-status.md  secrets-guide.md  sops-nix-implementation.md  sops-nix.md  ssh-secrets.md  stylix.txt  swift_lsp.txt  (+9 more)
external-wallpapers/: .gitkeep
home/: fleet-hosts.nix  github-app-manifest.json  pass-materialize-env.json  pass-materialize.json  pass-materialize.nix  secretspec.toml  ssh-keys.nix  wifi-networks.json  wireguard-peers.json
hosts/: default.nix  erase-install-fetcher.sh
i3ipc-python-master/: setup.py
lib/: default.nix
modules/: _gtk-auth-icons.nix  _gtk-auth-style.nix  apps.nix  configurations.nix  darwin-appearance-sync.nix  darwin-maintenance.nix  default.nix  dendritic-helper.nix  dock.nix  editor.nix  flake-module.nix  greetd-gtk.nix  host-topology-den.nix  identity.nix  linux-desktop.nix  macos-wallpaper-no-sqlite.patch  microvm.nix  (+25 more)
modules/apps/dendritic-appearance/: Cargo.toml  _package.nix
modules/apps/dendritic-appearance/src/: activate.rs  avatar.rs  ghostty.rs  ide.rs  linux.rs  machine.rs  macos.rs  main.rs  observe.rs  palette.rs  qt.rs  reconcile.rs  state.rs  supervise.rs  tmux.rs  vscode-base16-map.json  wallpaper.rs
modules/apps/local-ai-cli/: Cargo.toml  _package.nix
modules/apps/local-ai-cli/src/: lib.rs  tui.rs
modules/apps/pass-store-tray/: Cargo.toml  pass_store_tray.py
modules/apps/pass-store-tray/src/: main.rs  ui_contract.rs
(+1064 files in other folders)
