[workspace]
resolver = "2"
members = [
  "dendritic-ipc",
  "dendritic",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
notify-rust = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
dendritic-ipc = { path = "dendritic-ipc" }
