[package]
name = "dendritic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Monolithic dendritic CLI + privileged helper (macOS/NixOS)"

[[bin]]
name = "dendritic"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dendritic-ipc = { workspace = true }
libc = { workspace = true }
notify-rust = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
