[package]
name = "dendritic-appearance"
version = "0.2.0"
edition = "2021"
description = "Cross-platform light/dark + wallpaper palette activation (macOS/NixOS)"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
