[package]
name = "dendritic-local-ai"
version = "0.1.0"
edition = "2021"
description = "Local Ollama CLI helpers (ai-local, chat)"
license = "MIT"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[[bin]]
name = "ai-local"
path = "src/bin/ai_local.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
