[package]
name = "pass-store-tray"
version = "0.2.0"
edition = "2021"
description = "Pass store sync status tray (iced + tray-icon)"
license = "MIT"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced"] }
tray-icon = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.release]
lto = true
codegen-units = 1
strip = true
