[package]
name = "pass-store-tray"
version = "0.4.1"
edition = "2021"
description = "Pass store sync native tray applet (tray-icon / muda)"
license = "MIT"

[dependencies]
tray-icon = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.release]
lto = true
codegen-units = 1
strip = true
